Ver https://stackoverflow.com/questions/43371813/hotworddetector-using-voiceinteractionservice-in-android

--- a/app/src/main/res/xml/my_voice_interaction_service.xml
+++ b/app/src/main/res/xml/my_voice_interaction_service.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <voice-interaction-service xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.xrobo.xrobo_hotword"
-    android:recognitionService=".MyVoiceInteractionService"
-    android:sessionService="android.service.voice.VoiceInteractionSession"
+    android:recognitionService="MyRecognitionService"
+    android:sessionService="MyVoiceInteractionSessionService"
     android:supportsAssist="false"
     android:supportsLaunchVoiceAssistFromKeyguard="false" />
