Ver https://stackoverflow.com/questions/43371813/hotworddetector-using-voiceinteractionservice-in-android
Ver http://androidxref.com/5.0.0_r2/xref/frameworks/base/tests/VoiceInteraction/

--- a/app/src/main/res/xml/my_voice_interaction_service.xml
+++ b/app/src/main/res/xml/my_voice_interaction_service.xml
@@ -2,5 +2,6 @@
 <voice-interaction-service xmlns:android="http://schemas.android.com/apk/res/android"
     android:recognitionService="br.com.xrobo.xrobo_hotword.MyRecognitionService"
     android:sessionService="br.com.xrobo.xrobo_hotword.MyVoiceInteractionSessionService"
+    android:settingsActivity="br.com.xrobo.xrobo_hotword.SettingsActivity"
     android:supportsAssist="false"
     android:supportsLaunchVoiceAssistFromKeyguard="false" />
